2007-01-19  Sven Neumann  <sven@gimp.org>

	* app/app_procs.c
	* app/file/file-utils.[ch]: moved code from app_procs.c to file-utils.

2007-01-19  Raphaël Quinet  <raphael@gimp.org>

	* app/tools/gimpiscissorstool.[ch]: Added some status bar messages.
	Use ISCISSORS_OP_CONNECT to let the user know when the cursor is
	above the first point and the user can connect and close the
	curve.  Allow the user to press Enter or Escape to confirm the
	selection or cancel the tool.  Fixes bug #398309.

2007-01-18  Michael Natterer  <mitch@gimp.org>

	* app/pdb/color_cmds.c: regenerated.

2007-01-18  Kevin Cozens  <kcozens@cvs.gnome.org>

	* tools/pdbgen/pdb/color.pdb: allow low value to be equal to the high
	value for PDB call to gimp-threshold. From a patch by Dave Gowers.
	Fixes bug #397903.

2007-01-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/curve_bend.c (bender_type_callback): check data
	before accessing it to avoid crashing while the dialog is being
	constructed. Fixes bug #395798.

2007-01-16  Sven Neumann  <sven@gimp.org>

	* app/actions/file-commands.c (file_open_dialog_show): use the
	toplevel widget as transient parent.

2007-01-16  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpprofilechooserdialog.c: use GTK_RESPONSE_ACCEPT
	to make it work properly with GtkFileChooserButton.

2007-01-16  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpprofilechooserdialog.c: include *.icm files in
	the filter. Add a shortcut to the systemwide color profile folder.

2007-01-16  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/gimpplugin-message.c (gimp_plug_in_handle_proc_run):
	fixed comment.

2007-01-15  Michael Natterer  <mitch@gimp.org>

	* app/base/pixel-region.c (pixel_region_set,get_row): add support
	for non-tiled regions.

	* app/paint/gimpperspectiveclone.[ch]: replace handmade
	transformation code by a call to gimp_transform_region(). Fix
	getting the original pixels for src_pickable != dest_drawable
	(bug #394610). Various small fixes and cleanups.
