@@ -25,10 +25,10 @@
 #include <gdk-pixbuf/gdk-pixbuf.h>
 
 
-gchar               * file_utils_filename_to_uri        (GSList        *procs,
+gchar               * file_utils_filename_to_uri        (Gimp          *gimp,
                                                          const gchar   *filename,
                                                          GError       **error);
-gchar               * file_utils_any_to_uri             (GSList        *procs,
+gchar               * file_utils_any_to_uri             (Gimp          *gimp,
                                                          const gchar   *filename_or_uri,
                                                          GError       **error);
 gchar               * file_utils_filename_from_uri      (const gchar   *uri);
