@@ -58,7 +58,7 @@ HELP
   gchar               *uri;
   gint                 i;
 
-  uri = file_utils_filename_to_uri (gimp->plug_in_manager->load_procs,
+  uri = file_utils_filename_to_uri (gimp,
                                     g_value_get_string (&args->values[1]),
                                     NULL);
 
@@ -127,8 +127,7 @@ HELP
     %invoke = (
         code => <<'CODE'
 {
-  gchar *uri = file_utils_filename_to_uri (gimp->plug_in_manager->load_procs,
-                                           filename, NULL);
+  gchar *uri = file_utils_filename_to_uri (gimp, filename, NULL);
 
   if (uri)
     {
@@ -185,8 +184,7 @@ HELP
     %invoke = (
         code => <<'CODE'
 {
-  gchar *uri = file_utils_filename_to_uri (gimp->plug_in_manager->load_procs,
-                                           filename, NULL);
+  gchar *uri = file_utils_filename_to_uri (gimp, filename, NULL);
 
   if (uri)
     {
@@ -262,7 +260,7 @@ HELP
   gchar               *uri;
   gint                 i;
 
-  uri = file_utils_filename_to_uri (gimp->plug_in_manager->load_procs,
+  uri = file_utils_filename_to_uri (gimp,
                                     g_value_get_string (&args->values[3]),
                                     NULL);
 
